Fix new issue/pr avatar (#31419)
The avatar on "New Issue" and "New Pull Request" pages was inconsistent.
Removed the extra margin and the new CSS rules now use common parent
`<form id="#new-issue">` because `.repository.new.issue` is not present
on pull request page.

--- a/web_src/css/repo.css
+++ b/web_src/css/repo.css
@@ -530,12 +530,8 @@ td .commit-summary {
   min-width: 100px;
 }
 
-.repository.new.issue .comment.form .comment .avatar {
+#new-issue .avatar {
   width: 3em;
-}
-
-.repository.new.issue .comment.form .content {
-  margin-left: 4em;
 }
 
 .repository.new.issue .comment.form .content::before,
